Test/Parser/Bad/bad_indentation.py
# RUN: %chocopy-llvm %s 2>&1 | FileCheck %s.err

x = 1
  y = 2
z = 3
